
VERSION 0.7.1cvs
================

2005-04-15  Vincent Richard  <vincent@vincent-richard.net>

 * url.{hpp|cpp}, urlUtils.{hpp|cpp}: fixed a lot of bugs in URLs parsing
   and encoding/decoding + added unit tests.

2005-04-14  Vincent Richard  <vincent@vincent-richard.net>

 * url.{hpp|cpp}, urlUtils.{hpp|cpp}: moved 'url' and 'urlUtils' from
   'vmime::messaging' namespace to 'vmime::utility' namespace.

2005-04-12  Vincent Richard  <vincent@vincent-richard.net>

 * Started version 0.7.1.


VERSION 0.7.0
=============

2005-04-12  Vincent Richard  <vincent@vincent-richard.net>

 * parameter.{cpp|hpp}, contentDispositionField.{cpp|hpp}: added support
   for RFC-2231 (encoded word extensions). Changed 'filename' parameter
   type from 'vmime::string' to 'vmime::word'. Default parameter type is
   now vmime::word, and not vmime::string.

2005-04-09  Vincent Richard  <vincent@vincent-richard.net>

 * encoderB64.cpp: fixed a bug in Base64 decoding. Bytes to be decoded
   were not correctly initialized.

2005-04-03  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/*: moved IMAP, POP3, maildir and SMTP files to separate
   namespaces.

2005-03-31  Vincent Richard  <vincent@vincent-richard.net>

 * misc/importanceHelper.{cpp|hpp}: added support for message importance:
   "X-Priority:" and "Importance:" fields.

2005-03-28  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/POP3Store.cpp: fixed POP3Store::sendPacket() to send "\r\n"
   in the same packet as the request. This caused problems with some
   servers (thanks to Donald Dade).

 * SConstruct: modified 'msvc' target to generate automatically the
   config file 'config.hpp.msvc'.

2005-03-27  Stefan Uhrig <stefanuhrig@gmx.net>

 * Added Windows platform handlers.

2005-03-27  Vincent Richard  <vincent@vincent-richard.net>

 * messageIdSequence.{cpp|hpp}: added a new basic type "messageIdSequence" for
   a list of message-ids separated by CFWS (used in "References:" field, for
   example).
